Sync all content

--- a/content/resources/1-561f03.md
+++ b/content/resources/1-561f03.md
@@ -5,8 +5,7 @@ file: /courses/1-561-motion-based-design-fall-2003/a14ba76a5db06d7c6f6972be71322
 file_size: 58215
 file_type: image/jpeg
 image_metadata:
-  caption: Skyscraper. (Photo courtesy of {{% resource_link "267f9571-ec43-44a7-b6e8-cf1091bc0407"
-    "openphoto.net" %}}.)
+  caption: Skyscraper. (Photo courtesy of [openphoto.net](http://www.openphoto.net).)
   credit: ''
   image-alt: Two skyscrapers against a blue sky.
 learning_resource_types: []
