--- a/content/resources/1-561f03-th.md
+++ b/content/resources/1-561f03-th.md
@@ -5,8 +5,7 @@ file: /courses/1-561-motion-based-design-fall-2003/d8d7e706fa5352065652819af96ff
 file_size: 14171
 file_type: image/jpeg
 image_metadata:
-  caption: Skyscraper. (Photo courtesy of {{% resource_link "267f9571-ec43-44a7-b6e8-cf1091bc0407"
-    "openphoto.net" %}}.)
+  caption: Skyscraper. (Photo courtesy of [openphoto.net](http://www.openphoto.net).)
   credit: ''
   image-alt: Two skyscrapers against a blue sky.
 learning_resource_types: []
