--- a/content/resources/1-561f03.md
+++ b/content/resources/1-561f03.md
@@ -4,6 +4,8 @@ description: ''
 file: /courses/1-561-motion-based-design-fall-2003/a14ba76a5db06d7c6f6972be71322be1_1-561f03.jpg
 file_size: 58215
 file_type: image/jpeg
+hide_download: true
+hide_download_original: null
 image_metadata:
   caption: Skyscraper. (Photo courtesy of [openphoto.net](http://www.openphoto.net).)
   credit: ''
